--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
+<!doctype html>
 <html>
 <head>
 
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 <script type="text/javascript">
-
-/// TODO: Write some Javascrip'.
 
 function showObjectText(objectID)
 {
